alienbnb footer not completed

--- a/index.html
+++ b/index.html
@@ -277,8 +277,104 @@
           </div>
         </div>
       </div>
+      <div class="row">
+        <div class="card">
+          <div class="card__side card__side--front">
+            <div class="card__header">
+              <img
+                class="card__image"
+                src="./src/assets/places/ufo.webp"
+                alt=""
+              />
+            </div>
+            <div class="card__body">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt
+              perspiciatis.
+            </div>
+          </div>
+          <div class="card__side card__side--back">
+            <div class="card__header--back"></div>
+            <div class="card__body--back">
+              <button class="btn btn--primary btn--back" type="button">
+                Reservar
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card__side card__side--front">
+            <div class="card__header">
+              <img
+                class="card__image"
+                src="./src/assets/places/b7c9264d-73c9-45c3-882e-6e9577d63d68.webp"
+                alt=""
+              />
+            </div>
+            <div class="card__body">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt
+              perspiciatis.
+            </div>
+          </div>
+          <div class="card__side card__side--back">
+            <div class="card__header--back"></div>
+            <div class="card__body--back">
+              <button class="btn btn--primary btn--back" type="button">
+                Reservar
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card__side card__side--front">
+            <div class="card__header">
+              <img
+                class="card__image"
+                src="./src/assets/places/122dbb4b-ac4f-4a53-87c0-7893519d38f1.webp"
+                alt=""
+              />
+            </div>
+            <div class="card__body">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt
+              perspiciatis.
+            </div>
+          </div>
+          <div class="card__side card__side--back">
+            <div class="card__header--back"></div>
+            <div class="card__body--back">
+              <button class="btn btn--primary btn--back" type="button">
+                Reservar
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <section class="section"></section>
+
+    <footer class="footer">
+      <div><i class="fa-regular fa-copyright"></i> alienbnb 2022, INC.</div>
+      <ul>
+        <li>
+          <a class="footer__link" href="#">About</a>
+        </li>
+        <li>
+          <a class="footer__link" href="#">Contacts</a>
+        </li>
+        <li>
+          <a class="footer__link" href="#">
+            <span> Planets </span>
+            <i class="fa-solid fa-angle-up"></i>
+          </a>
+        </li>
+      </ul>
+
+      <div>
+        <i class="fa-solid fa-globe"></i> English(US)
+        <i class="fa-solid fa-angle-up"></i>
+      </div>
+    </footer>
   </body>
 </html>
