--- a/contacts.html
+++ b/contacts.html
@@ -164,13 +164,48 @@
       </nav>
 
       <main class="main">
-        <h1 class="heading-primary">
-          <span class="heading-primary--main">alienbnb</span>
-          <span class="heading-primary--subtitle"
-            >Encuentra alojamiento en cualquier lugar del universo, descubre las
-            galaxias y cruzeros interplanetarios.</span
-          >
-        </h1>
+        <div class="form-box">
+          <h3>Contacts</h3>
+          <form action="">
+            <fieldset class="form-group">
+              <i class="fa-solid fa-user fa-lg form-icon"></i>
+              <input
+                id="name"
+                type="text"
+                required
+                class="form__input"
+                placeholder="Name"
+              />
+              <label for="name" class="form__label">Name</label>
+            </fieldset>
+
+            <fieldset class="form-group">
+              <i class="fa-solid fa-envelope fa-lg form-icon"></i>
+              <input
+                type="email"
+                name="email"
+                id="email"
+                required
+                class="form__input"
+                placeholder="Email"
+              />
+              <label for="email" class="form__label">Email</label>
+            </fieldset>
+
+            <fieldset class="form-group">
+              <label for="textarea" class="label"></label>
+              <textarea
+                class="textarea"
+                id="textarea"
+                name="message"
+                placeholder="your message"
+                rows="4"
+              ></textarea>
+            </fieldset>
+
+            <button class="btn btn--primary" type="submit">Submit</button>
+          </form>
+        </div>
       </main>
 
       <div class="wave-bottom">
@@ -192,167 +227,6 @@
         </svg>
       </div>
     </header>
-
-    <section class="section section--populars">
-      <div class="wave-top">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-          <path
-            fill-opacity="1"
-            d="M0,160L80,176C160,192,320,224,480,202.7C640,181,800,107,960,74.7C1120,43,1280,53,1360,58.7L1440,64L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z"
-          ></path>
-        </svg>
-      </div>
-
-      <h2 class="heading-secondary">mas populares</h2>
-      <div class="row">
-        <div class="card">
-          <div class="card__side card__side--front">
-            <div class="card__header">
-              <img
-                class="card__image"
-                src="./src/assets/places/tatouine.webp"
-                alt=""
-              />
-            </div>
-            <div class="card__body">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt
-              perspiciatis.
-            </div>
-          </div>
-          <div class="card__side card__side--back">
-            <div class="card__header--back"></div>
-            <div class="card__body--back">
-              <button class="btn btn--primary btn--back" type="button">
-                Reservar
-              </button>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card__side card__side--front">
-            <div class="card__header">
-              <img
-                class="card__image"
-                src="./src/assets/places/1ef9b49c-6f99-4018-95f9-8471a9fbbd15.webp"
-                alt=""
-              />
-            </div>
-            <div class="card__body">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt
-              perspiciatis.
-            </div>
-          </div>
-          <div class="card__side card__side--back">
-            <div class="card__header--back"></div>
-            <div class="card__body--back">
-              <button class="btn btn--primary btn--back" type="button">
-                Reservar
-              </button>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card__side card__side--front">
-            <div class="card__header">
-              <img
-                class="card__image"
-                src="./src/assets/places/b48c39c7-dc65-4cee-9d32-d52ea70afc2a.webp"
-                alt=""
-              />
-            </div>
-            <div class="card__body">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt
-              perspiciatis.
-            </div>
-          </div>
-          <div class="card__side card__side--back">
-            <div class="card__header--back"></div>
-            <div class="card__body--back">
-              <button class="btn btn--primary btn--back" type="button">
-                Reservar
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="card">
-          <div class="card__side card__side--front">
-            <div class="card__header">
-              <img
-                class="card__image"
-                src="./src/assets/places/ufo.webp"
-                alt=""
-              />
-            </div>
-            <div class="card__body">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt
-              perspiciatis.
-            </div>
-          </div>
-          <div class="card__side card__side--back">
-            <div class="card__header--back"></div>
-            <div class="card__body--back">
-              <button class="btn btn--primary btn--back" type="button">
-                Reservar
-              </button>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card__side card__side--front">
-            <div class="card__header">
-              <img
-                class="card__image"
-                src="./src/assets/places/b7c9264d-73c9-45c3-882e-6e9577d63d68.webp"
-                alt=""
-              />
-            </div>
-            <div class="card__body">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt
-              perspiciatis.
-            </div>
-          </div>
-          <div class="card__side card__side--back">
-            <div class="card__header--back"></div>
-            <div class="card__body--back">
-              <button class="btn btn--primary btn--back" type="button">
-                Reservar
-              </button>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card__side card__side--front">
-            <div class="card__header">
-              <img
-                class="card__image"
-                src="./src/assets/places/122dbb4b-ac4f-4a53-87c0-7893519d38f1.webp"
-                alt=""
-              />
-            </div>
-            <div class="card__body">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt
-              perspiciatis.
-            </div>
-          </div>
-          <div class="card__side card__side--back">
-            <div class="card__header--back"></div>
-            <div class="card__body--back">
-              <button class="btn btn--primary btn--back" type="button">
-                Reservar
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="section"></section>
 
     <footer class="footer">
       <div><i class="fa-regular fa-copyright"></i> alienbnb 2022, INC.</div>
