alienbnb form completed, but not responsive yet

--- a/contacts.html
+++ b/contacts.html
@@ -165,7 +165,7 @@
 
       <main class="main">
         <div class="form-box">
-          <h3>Contacts</h3>
+          <h3 class="form__heading">Contacts</h3>
           <form action="">
             <fieldset class="form-group">
               <i class="fa-solid fa-user fa-lg form-icon"></i>
@@ -193,14 +193,14 @@
             </fieldset>
 
             <fieldset class="form-group">
-              <label for="textarea" class="label"></label>
               <textarea
                 class="textarea"
                 id="textarea"
                 name="message"
-                placeholder="your message"
+                placeholder="Your message"
                 rows="4"
               ></textarea>
+              <label for="textarea" class="form__label">Your message</label>
             </fieldset>
 
             <button class="btn btn--primary" type="submit">Submit</button>
@@ -232,21 +232,21 @@
       <div><i class="fa-regular fa-copyright"></i> alienbnb 2022, INC.</div>
       <ul>
         <li>
-          <a class="footer__link" href="./">About</a>
+          <a class="footer__link" href="./index.html">
+            <i class="fa-solid fa-house"></i>
+            <span> Home </span>
+          </a>
+        </li>
+        <li>
+          <a class="footer__link" href="#">About</a>
         </li>
         <li>
           <a class="footer__link" href="./contacts.html">Contacts</a>
         </li>
-        <li>
-          <a class="footer__link" href="#">
-            <span> Planets </span>
-            <i class="fa-solid fa-angle-up"></i>
-          </a>
-        </li>
       </ul>
 
       <div>
-        <i class="fa-solid fa-globe"></i> English(US)
+        <i class="fa-solid fa-globe"></i> Español(lat)
         <i class="fa-solid fa-angle-up"></i>
       </div>
     </footer>
