--- a/index.html
+++ b/index.html
@@ -358,21 +358,21 @@
       <div><i class="fa-regular fa-copyright"></i> alienbnb 2022, INC.</div>
       <ul>
         <li>
-          <a class="footer__link" href="./">About</a>
+          <a class="footer__link" href="./index.html">
+            <i class="fa-solid fa-house"></i>
+            <span> Home </span>
+          </a>
+        </li>
+        <li>
+          <a class="footer__link" href="#">About</a>
         </li>
         <li>
           <a class="footer__link" href="./contacts.html">Contacts</a>
         </li>
-        <li>
-          <a class="footer__link" href="#">
-            <span> Planets </span>
-            <i class="fa-solid fa-angle-up"></i>
-          </a>
-        </li>
       </ul>
 
       <div>
-        <i class="fa-solid fa-globe"></i> English(US)
+        <i class="fa-solid fa-globe"></i> Español(lat)
         <i class="fa-solid fa-angle-up"></i>
       </div>
     </footer>
