alienbnb about semi-completed, but not responsive yet

--- a/index.html
+++ b/index.html
@@ -128,21 +128,21 @@
       </ul>
     </aside>
 
-    <header class="header">
+    <header class="header" id="hero-section">
       <nav class="navbar">
         <ul>
           <li>
-            <a class="navbar__link" href="#">
+            <a class="navbar__link" href="#hero-section">
               <i class="fa-brands fa-airbnb"></i>
               <span class="fa-airbnb__heading">alienbnb</span>
             </a>
           </li>
           <li>
-            <label for="seach"> </label>
+            <label for="search"> </label>
             <input
               class="input-search"
               type="search"
-              name="seach"
+              name="search"
               id="search"
               placeholder="Buscar planeta..."
             />
@@ -152,7 +152,6 @@
               <span> Házte Alien </span>
               <i class="fa-solid fa-shuttle-space"></i>
             </a>
-
             <div class="btn--toggle">
               <i class="fa-solid fa-bars-staggered"></i>
               <figure class="user-avatar">
@@ -166,10 +165,10 @@
       <main class="main">
         <h1 class="heading-primary">
           <span class="heading-primary--main">alienbnb</span>
-          <span class="heading-primary--subtitle"
-            >Encuentra alojamiento en cualquier lugar del universo, descubre las
-            galaxias y cruzeros interplanetarios.</span
-          >
+          <span class="heading-primary--subtitle">
+            Encuentra alojamiento en cualquier lugar del universo, descubre las
+            galaxias y cruzeros interplanetarios.
+          </span>
         </h1>
       </main>
 
@@ -202,7 +201,6 @@
           ></path>
         </svg>
       </div>
-
       <h2 class="heading-secondary">mas populares</h2>
       <div class="row">
         <div class="card">
@@ -228,7 +226,6 @@
             </div>
           </div>
         </div>
-
         <div class="card">
           <div class="card__side card__side--front">
             <div class="card__header">
@@ -252,7 +249,6 @@
             </div>
           </div>
         </div>
-
         <div class="card">
           <div class="card__side card__side--front">
             <div class="card__header">
@@ -301,7 +297,6 @@
             </div>
           </div>
         </div>
-
         <div class="card">
           <div class="card__side card__side--front">
             <div class="card__header">
@@ -325,7 +320,6 @@
             </div>
           </div>
         </div>
-
         <div class="card">
           <div class="card__side card__side--front">
             <div class="card__header">
@@ -352,25 +346,42 @@
       </div>
     </section>
 
-    <section class="section"></section>
+    <section class="section--about" id="about">
+      <div class="section--about__content">
+        <h2 class="heading-primary heading-primary--small">About Us</h2>
+
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. At
+          cupiditate laborum ullam dolor! Mollitia obcaecati aliquam deserunt
+          quidem eaque. Alias distinctio corporis molestias inventore, sit ipsam
+          similique id adipisci quibusdam.
+        </p>
+        <br />
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. At
+          cupiditate laborum ullam dolor! Mollitia obcaecati aliquam deserunt
+          quidem eaque. Alias distinctio corporis molestias inventore, sit ipsam
+          similique id adipisci quibusdam.
+        </p>
+      </div>
+    </section>
 
     <footer class="footer">
       <div><i class="fa-regular fa-copyright"></i> alienbnb 2022, INC.</div>
       <ul>
         <li>
-          <a class="footer__link" href="./index.html">
+          <a class="footer__link" href="#hero-section">
             <i class="fa-solid fa-house"></i>
             <span> Home </span>
           </a>
         </li>
         <li>
-          <a class="footer__link" href="#">About</a>
+          <a class="footer__link" href="#about">About</a>
         </li>
         <li>
           <a class="footer__link" href="./contacts.html">Contacts</a>
         </li>
       </ul>
-
       <div>
         <i class="fa-solid fa-globe"></i> Español(lat)
         <i class="fa-solid fa-angle-up"></i>
