--- a/contacts.html
+++ b/contacts.html
@@ -128,24 +128,25 @@
       </ul>
     </aside>
 
-    <header class="header">
+    <header class="header" id="hero-section">
       <nav class="navbar">
         <ul>
           <li>
-            <a class="navbar__link" href="#">
+            <a class="navbar__link" href="./index.html#hero-section">
               <i class="fa-brands fa-airbnb"></i>
               <span class="fa-airbnb__heading">alienbnb</span>
             </a>
           </li>
           <li>
-            <label for="seach"> </label>
-            <input
-              class="input-search"
-              type="search"
-              name="seach"
-              id="search"
-              placeholder="Buscar planeta..."
-            />
+            <label for="search">
+              <input
+                class="input-search"
+                type="search"
+                name="search"
+                id="search"
+                placeholder="Buscar planeta..."
+              />
+            </label>
           </li>
           <li>
             <a class="navbar__link" href="#">
@@ -178,7 +179,6 @@
               />
               <label for="name" class="form__label">Name</label>
             </fieldset>
-
             <fieldset class="form-group">
               <i class="fa-solid fa-envelope fa-lg form-icon"></i>
               <input
@@ -191,7 +191,6 @@
               />
               <label for="email" class="form__label">Email</label>
             </fieldset>
-
             <fieldset class="form-group">
               <textarea
                 class="textarea"
@@ -202,7 +201,6 @@
               ></textarea>
               <label for="textarea" class="form__label">Your message</label>
             </fieldset>
-
             <button class="btn btn--primary" type="submit">Submit</button>
           </form>
         </div>
@@ -238,13 +236,12 @@
           </a>
         </li>
         <li>
-          <a class="footer__link" href="#">About</a>
+          <a class="footer__link" href="./index.html#about">About</a>
         </li>
         <li>
           <a class="footer__link" href="./contacts.html">Contacts</a>
         </li>
       </ul>
-
       <div>
         <i class="fa-solid fa-globe"></i> Español(lat)
         <i class="fa-solid fa-angle-up"></i>
