alienbnb some errors corrected, but not responsive yet

--- a/index.html
+++ b/index.html
@@ -138,14 +138,15 @@
             </a>
           </li>
           <li>
-            <label for="search"> </label>
-            <input
-              class="input-search"
-              type="search"
-              name="search"
-              id="search"
-              placeholder="Buscar planeta..."
-            />
+            <label for="search">
+              <input
+                class="input-search"
+                type="search"
+                name="search"
+                id="search"
+                placeholder="Buscar planeta..."
+              />
+            </label>
           </li>
           <li>
             <a class="navbar__link" href="#">
