alienbnb responsive almost completed

--- a/index.html
+++ b/index.html
@@ -273,8 +273,7 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="row">
+
         <div class="card">
           <div class="card__side card__side--front">
             <div class="card__header">
@@ -327,6 +326,52 @@
               <img
                 class="card__image"
                 src="./src/assets/places/122dbb4b-ac4f-4a53-87c0-7893519d38f1.webp"
+                alt=""
+              />
+            </div>
+            <div class="card__body">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt
+              perspiciatis.
+            </div>
+          </div>
+          <div class="card__side card__side--back">
+            <div class="card__header--back"></div>
+            <div class="card__body--back">
+              <button class="btn btn--primary btn--back" type="button">
+                Reservar
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card__side card__side--front">
+            <div class="card__header">
+              <img
+                class="card__image"
+                src="./src/assets/places/a37606a2-8fba-4b33-bf2a-531825300df1.webp"
+                alt=""
+              />
+            </div>
+            <div class="card__body">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt
+              perspiciatis.
+            </div>
+          </div>
+          <div class="card__side card__side--back">
+            <div class="card__header--back"></div>
+            <div class="card__body--back">
+              <button class="btn btn--primary btn--back" type="button">
+                Reservar
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card__side card__side--front">
+            <div class="card__header">
+              <img
+                class="card__image"
+                src="./src/assets/places/d626c25f-cab3-4d8f-b7b5-432419d338a2.webp"
                 alt=""
               />
             </div>
