alienbnb responsive completed

--- a/contacts.html
+++ b/contacts.html
@@ -18,121 +18,134 @@
   </head>
   <body>
     <aside class="drawer hidden">
-      <div class="drawer__login">
-        <button class="btn btn--primary" type="button">Log in</button>
-        <i class="fa-brands fa-airbnb"></i>
+      <div class="drawer__row">
+        <div class="drawer__login">
+          <button class="btn btn--primary" type="button">Log in</button>
+          <i class="fa-brands fa-airbnb"></i>
+        </div>
+        <ul>
+          <li>
+            <a class="drawer__link" href="#">
+              <img class="airbnb-img" src="./src/assets/icons/ufo.jpg" alt="" />
+              <span>Naves-Hotel</span>
+            </a>
+          </li>
+          <li>
+            <a class="drawer__link" href="#">
+              <img
+                class="airbnb-img"
+                src="./src/assets/icons/castles.jpg"
+                alt=""
+              />
+              <span>Castillos Nebulares</span>
+            </a>
+          </li>
+          <li>
+            <a class="drawer__link" href="#">
+              <img
+                class="airbnb-img"
+                src="./src/assets/icons/earth-homes.jpg"
+                alt=""
+              />
+              <span>Casas Terrícolas</span>
+            </a>
+          </li>
+          <li>
+            <a class="drawer__link" href="#">
+              <img
+                class="airbnb-img"
+                src="./src/assets/icons/ices.jpg"
+                alt=""
+              />
+              <span>Galaxias Heladas</span>
+            </a>
+          </li>
+          <li>
+            <a class="drawer__link" href="#">
+              <img
+                class="airbnb-img"
+                src="./src/assets/icons/surfing.jpg"
+                alt=""
+              />
+              <span>Planetas Acuáticos</span>
+            </a>
+          </li>
+          <li>
+            <a class="drawer__link" href="#">
+              <img
+                class="airbnb-img"
+                src="./src/assets/icons/beaches.jpg"
+                alt=""
+              />
+              <span>Asteroides con Playa</span>
+            </a>
+          </li>
+          <li>
+            <a class="drawer__link" href="#">
+              <img
+                class="airbnb-img"
+                src="./src/assets/icons/forests.jpg"
+                alt=""
+              />
+              <span>Montañas de Metano</span>
+            </a>
+          </li>
+          <li>
+            <a class="drawer__link" href="#">
+              <img
+                class="airbnb-img"
+                src="./src/assets/icons/luxurious.jpg"
+                alt=""
+              />
+              <span>Casas Comestibles</span>
+            </a>
+          </li>
+          <li>
+            <a class="drawer__link" href="#">
+              <img
+                class="airbnb-img"
+                src="./src/assets/icons/tropical.jpg"
+                alt=""
+              />
+              <span>Cercanas a su Estrella</span>
+            </a>
+          </li>
+          <li>
+            <a class="drawer__link" href="#">
+              <img
+                class="airbnb-img"
+                src="./src/assets/icons/tiny-houses.jpg"
+                alt=""
+              />
+              <span>No se aceptan humanos</span>
+            </a>
+          </li>
+          <li>
+            <a class="drawer__link" href="#">
+              <img
+                class="airbnb-img"
+                src="./src/assets/icons/cavernicolas.jpg"
+                alt=""
+              />
+              <span>Edad de Piedra</span>
+            </a>
+          </li>
+        </ul>
       </div>
-      <ul>
-        <li>
-          <a class="drawer__link" href="#">
-            <img class="airbnb-img" src="./src/assets/icons/ufo.jpg" alt="" />
-            <span>Naves-Hotel</span>
-          </a>
-        </li>
-        <li>
-          <a class="drawer__link" href="#">
-            <img
-              class="airbnb-img"
-              src="./src/assets/icons/castles.jpg"
-              alt=""
-            />
-            <span>Castillos Nebulares</span>
-          </a>
-        </li>
-        <li>
-          <a class="drawer__link" href="#">
-            <img
-              class="airbnb-img"
-              src="./src/assets/icons/earth-homes.jpg"
-              alt=""
-            />
-            <span>Casas Terrícolas</span>
-          </a>
-        </li>
-        <li>
-          <a class="drawer__link" href="#">
-            <img class="airbnb-img" src="./src/assets/icons/ices.jpg" alt="" />
-            <span>Galaxias Heladas</span>
-          </a>
-        </li>
-        <li>
-          <a class="drawer__link" href="#">
-            <img
-              class="airbnb-img"
-              src="./src/assets/icons/surfing.jpg"
-              alt=""
-            />
-            <span>Planetas Acuáticos</span>
-          </a>
-        </li>
-        <li>
-          <a class="drawer__link" href="#">
-            <img
-              class="airbnb-img"
-              src="./src/assets/icons/beaches.jpg"
-              alt=""
-            />
-            <span>Asteroides con Playa</span>
-          </a>
-        </li>
-        <li>
-          <a class="drawer__link" href="#">
-            <img
-              class="airbnb-img"
-              src="./src/assets/icons/forests.jpg"
-              alt=""
-            />
-            <span>Montañas de Metano</span>
-          </a>
-        </li>
-        <li>
-          <a class="drawer__link" href="#">
-            <img
-              class="airbnb-img"
-              src="./src/assets/icons/luxurious.jpg"
-              alt=""
-            />
-            <span>Casas Comestibles</span>
-          </a>
-        </li>
-        <li>
-          <a class="drawer__link" href="#">
-            <img
-              class="airbnb-img"
-              src="./src/assets/icons/tropical.jpg"
-              alt=""
-            />
-            <span>Cercanas a su Estrella</span>
-          </a>
-        </li>
-        <li>
-          <a class="drawer__link" href="#">
-            <img
-              class="airbnb-img"
-              src="./src/assets/icons/tiny-houses.jpg"
-              alt=""
-            />
-            <span>No se aceptan humanos</span>
-          </a>
-        </li>
-        <li>
-          <a class="drawer__link" href="#">
-            <img
-              class="airbnb-img"
-              src="./src/assets/icons/cavernicolas.jpg"
-              alt=""
-            />
-            <span>Edad de Piedra</span>
-          </a>
-        </li>
-      </ul>
+
+      <div class="become-alien">
+        <a href="#">
+          <span> Házte Alien </span>
+          <i class="fa-solid fa-shuttle-space"></i>
+        </a>
+      </div>
     </aside>
 
     <header class="header" id="hero-section">
       <nav class="navbar">
         <ul>
           <li>
-            <a class="navbar__link" href="./index.html#hero-section">
+            <a class="navbar__link" href="#hero-section">
               <i class="fa-brands fa-airbnb"></i>
               <span class="fa-airbnb__heading">alienbnb</span>
             </a>
@@ -149,11 +162,10 @@
             </label>
           </li>
           <li>
-            <a class="navbar__link" href="#">
+            <a class="navbar__link become-alien" href="#">
               <span> Házte Alien </span>
               <i class="fa-solid fa-shuttle-space"></i>
             </a>
-
             <div class="btn--toggle">
               <i class="fa-solid fa-bars-staggered"></i>
               <figure class="user-avatar">
@@ -167,7 +179,7 @@
       <main class="main">
         <div class="form-box">
           <h3 class="form__heading">Contacts</h3>
-          <form action="">
+          <form class="form">
             <fieldset class="form-group">
               <i class="fa-solid fa-user fa-lg form-icon"></i>
               <input
@@ -227,7 +239,7 @@
     </header>
 
     <footer class="footer">
-      <div><i class="fa-regular fa-copyright"></i> alienbnb 2022, INC.</div>
+      <div><i class="fa-regular fa-copyright"></i> alienbnb 2022</div>
       <ul>
         <li>
           <a class="footer__link" href="./index.html">
@@ -243,8 +255,11 @@
         </li>
       </ul>
       <div>
-        <i class="fa-solid fa-globe"></i> Español(lat)
-        <i class="fa-solid fa-angle-up"></i>
+        <i class="fa-solid fa-globe"></i>
+        <span>
+          Español(lat)
+          <i class="fa-solid fa-angle-up"></i>
+        </span>
       </div>
     </footer>
   </body>
