--- a/index.html
+++ b/index.html
@@ -18,114 +18,127 @@
   </head>
   <body>
     <aside class="drawer hidden">
-      <div class="drawer__login">
-        <button class="btn btn--primary" type="button">Log in</button>
-        <i class="fa-brands fa-airbnb"></i>
+      <div class="drawer__row">
+        <div class="drawer__login">
+          <button class="btn btn--primary" type="button">Log in</button>
+          <i class="fa-brands fa-airbnb"></i>
+        </div>
+        <ul>
+          <li>
+            <a class="drawer__link" href="#">
+              <img class="airbnb-img" src="./src/assets/icons/ufo.jpg" alt="" />
+              <span>Naves-Hotel</span>
+            </a>
+          </li>
+          <li>
+            <a class="drawer__link" href="#">
+              <img
+                class="airbnb-img"
+                src="./src/assets/icons/castles.jpg"
+                alt=""
+              />
+              <span>Castillos Nebulares</span>
+            </a>
+          </li>
+          <li>
+            <a class="drawer__link" href="#">
+              <img
+                class="airbnb-img"
+                src="./src/assets/icons/earth-homes.jpg"
+                alt=""
+              />
+              <span>Casas Terrícolas</span>
+            </a>
+          </li>
+          <li>
+            <a class="drawer__link" href="#">
+              <img
+                class="airbnb-img"
+                src="./src/assets/icons/ices.jpg"
+                alt=""
+              />
+              <span>Galaxias Heladas</span>
+            </a>
+          </li>
+          <li>
+            <a class="drawer__link" href="#">
+              <img
+                class="airbnb-img"
+                src="./src/assets/icons/surfing.jpg"
+                alt=""
+              />
+              <span>Planetas Acuáticos</span>
+            </a>
+          </li>
+          <li>
+            <a class="drawer__link" href="#">
+              <img
+                class="airbnb-img"
+                src="./src/assets/icons/beaches.jpg"
+                alt=""
+              />
+              <span>Asteroides con Playa</span>
+            </a>
+          </li>
+          <li>
+            <a class="drawer__link" href="#">
+              <img
+                class="airbnb-img"
+                src="./src/assets/icons/forests.jpg"
+                alt=""
+              />
+              <span>Montañas de Metano</span>
+            </a>
+          </li>
+          <li>
+            <a class="drawer__link" href="#">
+              <img
+                class="airbnb-img"
+                src="./src/assets/icons/luxurious.jpg"
+                alt=""
+              />
+              <span>Casas Comestibles</span>
+            </a>
+          </li>
+          <li>
+            <a class="drawer__link" href="#">
+              <img
+                class="airbnb-img"
+                src="./src/assets/icons/tropical.jpg"
+                alt=""
+              />
+              <span>Cercanas a su Estrella</span>
+            </a>
+          </li>
+          <li>
+            <a class="drawer__link" href="#">
+              <img
+                class="airbnb-img"
+                src="./src/assets/icons/tiny-houses.jpg"
+                alt=""
+              />
+              <span>No se aceptan humanos</span>
+            </a>
+          </li>
+          <li>
+            <a class="drawer__link" href="#">
+              <img
+                class="airbnb-img"
+                src="./src/assets/icons/cavernicolas.jpg"
+                alt=""
+              />
+              <span>Edad de Piedra</span>
+            </a>
+          </li>
+        </ul>
       </div>
-      <ul>
-        <li>
-          <a class="drawer__link" href="#">
-            <img class="airbnb-img" src="./src/assets/icons/ufo.jpg" alt="" />
-            <span>Naves-Hotel</span>
-          </a>
-        </li>
-        <li>
-          <a class="drawer__link" href="#">
-            <img
-              class="airbnb-img"
-              src="./src/assets/icons/castles.jpg"
-              alt=""
-            />
-            <span>Castillos Nebulares</span>
-          </a>
-        </li>
-        <li>
-          <a class="drawer__link" href="#">
-            <img
-              class="airbnb-img"
-              src="./src/assets/icons/earth-homes.jpg"
-              alt=""
-            />
-            <span>Casas Terrícolas</span>
-          </a>
-        </li>
-        <li>
-          <a class="drawer__link" href="#">
-            <img class="airbnb-img" src="./src/assets/icons/ices.jpg" alt="" />
-            <span>Galaxias Heladas</span>
-          </a>
-        </li>
-        <li>
-          <a class="drawer__link" href="#">
-            <img
-              class="airbnb-img"
-              src="./src/assets/icons/surfing.jpg"
-              alt=""
-            />
-            <span>Planetas Acuáticos</span>
-          </a>
-        </li>
-        <li>
-          <a class="drawer__link" href="#">
-            <img
-              class="airbnb-img"
-              src="./src/assets/icons/beaches.jpg"
-              alt=""
-            />
-            <span>Asteroides con Playa</span>
-          </a>
-        </li>
-        <li>
-          <a class="drawer__link" href="#">
-            <img
-              class="airbnb-img"
-              src="./src/assets/icons/forests.jpg"
-              alt=""
-            />
-            <span>Montañas de Metano</span>
-          </a>
-        </li>
-        <li>
-          <a class="drawer__link" href="#">
-            <img
-              class="airbnb-img"
-              src="./src/assets/icons/luxurious.jpg"
-              alt=""
-            />
-            <span>Casas Comestibles</span>
-          </a>
-        </li>
-        <li>
-          <a class="drawer__link" href="#">
-            <img
-              class="airbnb-img"
-              src="./src/assets/icons/tropical.jpg"
-              alt=""
-            />
-            <span>Cercanas a su Estrella</span>
-          </a>
-        </li>
-        <li>
-          <a class="drawer__link" href="#">
-            <img
-              class="airbnb-img"
-              src="./src/assets/icons/tiny-houses.jpg"
-              alt=""
-            />
-            <span>No se aceptan humanos</span>
-          </a>
-        </li>
-        <li>
-          <a class="drawer__link" href="#">
-            <img
-              class="airbnb-img"
-              src="./src/assets/icons/cavernicolas.jpg"
-              alt=""
-            />
-            <span>Edad de Piedra</span>
-          </a>
-        </li>
-      </ul>
+
+      <div class="become-alien">
+        <a href="#">
+          <span> Házte Alien </span>
+          <i class="fa-solid fa-shuttle-space"></i>
+        </a>
+      </div>
     </aside>
 
     <header class="header" id="hero-section">
@@ -149,7 +162,7 @@
             </label>
           </li>
           <li>
-            <a class="navbar__link" href="#">
+            <a class="navbar__link become-alien" href="#">
               <span> Házte Alien </span>
               <i class="fa-solid fa-shuttle-space"></i>
             </a>
@@ -413,7 +426,7 @@
     </section>
 
     <footer class="footer">
-      <div><i class="fa-regular fa-copyright"></i> alienbnb 2022, INC.</div>
+      <div><i class="fa-regular fa-copyright"></i> alienbnb 2022</div>
       <ul>
         <li>
           <a class="footer__link" href="#hero-section">
@@ -429,7 +442,8 @@
         </li>
       </ul>
       <div>
-        <i class="fa-solid fa-globe"></i> Español(lat)
+        <i class="fa-solid fa-globe"></i>
+        <span> Español(lat) </span>
         <i class="fa-solid fa-angle-up"></i>
       </div>
     </footer>
